[package]
name = "hello-diesel"
version = "0.1.0"
authors = ["Faust Fu <faust.fu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
diesel = { version = "1.4.4", features = ["postgres"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
